--- a/analysis/Simulation.Rmd
+++ b/analysis/Simulation.Rmd
@@ -28,7 +28,7 @@ knitr::read_chunk("chunks.R")
 <!-- Add your analysis here -->
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,eval=FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Model framework
