wflow_publish("analysis/Simulation.Rmd")

--- a/analysis/Simulation.Rmd
+++ b/analysis/Simulation.Rmd
@@ -2,7 +2,9 @@
 title: "Simulation for Correlation Motif"
 author: "Zhiwei Ma"
 date: "8/30/2017"
-output: html_document
+output: 
+  html_document:
+    toc: false
 ---
 <!-- The file analysis/chunks.R contains chunks that define default settings
 shared across the workflowr files. -->
