--- a/analysis/Simulation_generic_Cormotif.Rmd
+++ b/analysis/Simulation_generic_Cormotif.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Untitled"
+title: "Simulation for generic Cormotif model"
 author: "First Last"
-date: YYYY-MM-DD
+date: "9/24/2017"
 output: html_document
 ---
 
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(echo = TRUE,eval=FALSE)
 
 ### Simulation 
 
-We set unit number $n = 5000$, and study number $R = 4$. We set every observation has the same standard error, $s_{jr}=1$. That is, $\hat\beta_{jr}|\beta_{jr}\sim N(\beta_{jr};0,1) $. the 5000 units come from 4 patterns ($K=4$): 2000 units have zero effects in all four studies, that is $\beta_{jr}=0$, for $r = 1,2,3,4$; 1000 units have effect $\beta_{jr}\sim N(0,10^2)$ for $r =1, 2$ and $\beta_{jr}=0$ for $r =3, 4$; 1000 units have effect $\beta_{jr}\sim N(0,10^2)$ for $r =2, 3$ and $\beta_{jr}=0$ for $r =1, 4$; 2000 genes have effect $\beta_{jr}\sim N(0,10^2)$ for $r =1, 2,3,4$. 
+We set unit number $n = 5000$, and study number $R = 4$. We set every observation has the same standard error, $s_{jr}=1$. That is $\hat\beta_{jr}|\beta_{jr}\sim N(\beta_{jr};0,1)$. The 5000 units come from 4 patterns ($K=4$): 2000 units have zero effects in all four studies, that is $\beta_{jr}=0$, for $r = 1,2,3,4$; 1000 units have effect $\beta_{jr}\sim N(0,10^2)$ for $r =1, 2$ and $\beta_{jr}=0$ for $r =3, 4$; 1000 units have effect $\beta_{jr}\sim N(0,10^2)$ for $r =2, 3$ and $\beta_{jr}=0$ for $r =1, 4$; 2000 genes have effect $\beta_{jr}\sim N(0,10^2)$ for $r =1, 2,3,4$. 
 
 ```{r,cache=TRUE}
 source('~/Git/cormotif/code/function.R')
