--- a/analysis/Simulation_generic_Cormotif.Rmd
+++ b/analysis/Simulation_generic_Cormotif.Rmd
@@ -27,7 +27,7 @@ knitr::read_chunk("chunks.R")
 <!-- Add your analysis here -->
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,eval=FALSE)
+knitr::opts_chunk$set(echo = TRUE,eval=TRUE)
 ```
 
 ## Simulation 
