--- a/analysis/Simulation_generic_Cormotif.Rmd
+++ b/analysis/Simulation_generic_Cormotif.Rmd
@@ -61,6 +61,9 @@ for(g in 1:G){
 }
 betahat=X
 sebetahat=matrix(1,nrow=G,ncol=D)
+```
+
+```{r,cache=TRUE}
 fit = generic.cormotif(betahat,sebetahat,K=1:5)
 ```
 
