--- a/analysis/Simulation_generic_Cormotif.Rmd
+++ b/analysis/Simulation_generic_Cormotif.Rmd
@@ -27,14 +27,14 @@ knitr::read_chunk("chunks.R")
 <!-- Add your analysis here -->
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,eval=TRUE)
+knitr::opts_chunk$set(echo = TRUE,eval=FALSE)
 ```
 
 ## Simulation 
 
 We set unit number $n = 5000$, and study number $R = 4$. We set every observation has the same standard error, $s_{jr}=1$. That is $\hat\beta_{jr}|\beta_{jr}\sim N(\beta_{jr};0,1)$. The 5000 units come from 4 patterns ($K=4$): 4000 units have zero effects in all four studies, that is $\beta_{jr}=0$, for $r = 1,2,3,4$; 400 units have effect $\beta_{jr}\sim N(0,10^2)$ for $r =1, 2$ and $\beta_{jr}=0$ for $r =3, 4$; 400 units have effect $\beta_{jr}\sim N(0,10^2)$ for $r =2, 3$ and $\beta_{jr}=0$ for $r =1, 4$; 200 unitss have effect $\beta_{jr}\sim N(0,10^2)$ for $r =1, 2,3,4$. 
 
-### Known $K$
+### Known K
 
 First assume we know $K=4$ and fit the model. 
 
@@ -121,7 +121,7 @@ And lfsr:
 head(fit1$lfsr)
 ```
 
-### Unknown $K$
+### Unknown K
 
 Then suppose we don't know $k$. Set $K = 1:6$ and apply BIC and AIC.  
 
