--- a/paper/main.tex
+++ b/paper/main.tex
@@ -29,6 +29,8 @@
 \maketitle
 
 \section{Introduction}
+
+We introduce a new Empirical Bayes approach for jointly analyzing differential gene expression in multiple studies or under multiple experimental conditions (e.g., measured in different cell types), which allows for correlations among studies. Compared with existing methods, the new approach improves power and effect-size estimation. Model fitting procedures are implemented using expectation maximization (EM).
 %\textit{lfdr}
 \section{Methods}
 
