--- a/analysis/Simulation_generic_Cormotif.Rmd
+++ b/analysis/Simulation_generic_Cormotif.Rmd
@@ -66,7 +66,7 @@ for(g in 1:G){
 betahat=X
 sebetahat=matrix(1,nrow=G,ncol=D)
 # fit the model
-fit1 = generic.cormotif(betahat,sebetahat,K=4,mess=FALSE)
+fit1 = generic.cormotif(betahat,sebetahat,K=4,mess=TRUE)
 ```
 
 After fit the generic cormotif model, the standard deviation $\sigma_0,\sigma_1,\ldots,\sigma_L$ built by our method is 
